# expdoe-dk

./: .gitignore  LICENSE  NOTICE  README.md  README_zh.md  ax_doe_bo.py  benchmarks.py  doe_utils.py  requirements.txt
examples/: 01_reaction_optimization.ipynb  01_reaction_optimization.py
expdoe-dk/: .gitignore  LICENSE  README.md  pyproject.toml
expdoe-dk/examples/: 02_html_report.py
expdoe-dk/experiments/: 01_doe_method_comparison.py  02_knowledge_comparison.py  README.md  _oracles.py
expdoe-dk/src/expdoe_dk/: __init__.py  space.py
expdoe-dk/src/expdoe_dk/bo/: __init__.py  gp.py  loop.py  report.py
expdoe-dk/src/expdoe_dk/doe/: __init__.py  constrained.py  lhs.py
expdoe-dk/src/expdoe_dk/knowledge/: __init__.py  _frame.py  monotone.py  shape.py  validators.py
expdoe-dk/src/expdoe_dk/legacy/: __init__.py  ax_doe_bo.py  doe_utils.py
expdoe-dk/tests/: conftest.py  test_campaign_smoke.py  test_constrained_lhs.py  test_eps_auto_rescue.py  test_epsilon_validator.py  test_frame_translation.py  test_html_report.py  test_simulation_data2.py  test_validators.py
experiments/: 01_doe_method_comparison.py  02_knowledge_comparison.py  README.md  _ablation_knowledge_4d.py  _oracles.py
experiments/data_snapshot_01/: experiment_02_knowledge_2d.csv  experiment_02_knowledge_2d_summary.csv  experiment_02_knowledge_2d_traces.csv  experiment_02_knowledge_4d.csv  experiment_02_knowledge_4d_summary.csv  experiment_02_knowledge_4d_traces.csv  experiment_02_knowledge_6d.csv  experiment_02_knowledge_6d_summary.csv  experiment_02_knowledge_6d_traces.csv
experiments/simulation_data1/: 01_doe_method_comparison.py  README.md
experiments/simulation_data2/: 01_doe_method_comparison.py  02_knowledge_comparison.py  README.md  _oracles.py
